[package]
authors = ["Jan <jankaul@mailbox.org>"]
edition = "2018"
name = "weblab-markdown"
version = "0.1.2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
comrak = "0.9.1"
wasm-bindgen = "0.2.72"

[dev-dependencies]
wasm-bindgen-test = "0.3.22"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
